Make TNTRun functional